--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,2 +1,6 @@
 <h1>{{title}}</h1>
 <p>Welcome to {{title}}</p>
+
+<a href="/celebrities/create">Create a celebrities</a>
+<br />
+<a href="/celebrities-view">See all celebrities</a>
